tracdelight to catalogue - DE

--- a/docs/de-de/modules/maerkte/pages/tracdelight.adoc
+++ b/docs/de-de/modules/maerkte/pages/tracdelight.adoc
@@ -213,3 +213,73 @@ include::partial$catalogue-change-from-elastic-export.adoc[]
 [cols="1,1"]
 |====
 |Spalte im elastischen Export |Datenfeld im Katalog
+
+| Artikelnummer
+| SKU
+
+| Produkttitel
+| Titel
+
+| Bild-URL
+| Bild-URL
+
+| Deeplink
+| Artikel-URL
+
+| Produkt-Kategorie
+| Produkt-Kategorie
+
+| Produkt-Beschreibung
+| Produkt-Beschreibung
+
+| Preis
+| Preis
+
+| Währung
+| Währung
+
+| Marke
+| Marke
+
+| Versandkosten
+| Versandkosten
+
+| Geschlecht
+| Geschlecht
+
+| Grundpreis
+| Grundpreis
+
+| Streichpreis
+| Streichpreis
+
+| Lieferzeit
+| Lieferzeit
+
+| Produktstamm-ID
+| Varianten-ID
+
+| EAN
+| GTIN
+
+| Bild2-URL
+| Bild-URL 2
+
+| Bild3-URL
+| Bild-URL 3
+
+| Bild4-URL
+| Bild-URL 4
+
+| Bild5-URL
+| Bild-URL 5
+
+| Größe
+| Größe
+
+| Farbe
+| Farbe
+
+| Material
+| Material
+|====
