--- a/docs/de-de/modules/maerkte/partials/billiger-de-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/billiger-de-recommended-mappings.adoc
@@ -163,7 +163,7 @@ Bei Möbeln: Möbeltypen, Bettentyp, Polstermöbeltyp, Schranktyp, Tischtyp
 
 | UVP
 | nein
-| * *Verkaufspreis » UVP*
+| * *Verkaufspreis » [Verkaufspreis des Typs UVP wählen]*
 
 | Eigenmarke
 | nein
