--- a/docs/de-de/modules/maerkte/partials/check24-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/check24-recommended-mappings.adoc
@@ -53,7 +53,7 @@ _oder_
 
 | Preis
 | ja
-| * *Verkaufspreis* » Verkaufspreis für Check24
+| * *Verkaufspreis » [Verkaufspreis für {market} wählen]*
 
 | Grundpreis: Verkaufspreis
 | nein
