--- a/docs/de-de/modules/maerkte/pages/tracdelight.adoc
+++ b/docs/de-de/modules/maerkte/pages/tracdelight.adoc
@@ -46,7 +46,7 @@ include::partial$plugin-download.adoc[]
 include::partial$exportformate.adoc[]
 
 [#300]
-=== Verfügbare Spalten der Exportdatei
+==== Verfügbare Spalten der Exportdatei
 
 :export-format: TracdelightCOM-Plugin
 
@@ -191,7 +191,7 @@ include::partial$catalogue-filters.adoc[]
 include::partial$catalogue-settings.adoc[]
 
 [#catalogue-activation]
-===== Katalog aktivieren
+==== Katalog aktivieren
 
 :interval:
 
