--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -672,6 +672,9 @@
 *** xref:videos:lager-anlegen-und-verwalten.adoc[Lager anlegen und verwalten]
 
 .plentymarkets Changelog
+* xref:ROOT:changelog.adoc[Aktueller Changelog]
+* xref:changelog:april-2022.adoc[Changelogs April 2022]
+** xref:changelog:2022-04-06.adoc[Changelog 06. April 2022]
 * xref:changelog:march-2022.adoc[Changelogs März 2022]
 ** xref:changelog:2022-03-30.adoc[Changelog 30. März 2022]
 ** xref:changelog:2022-03-23.adoc[Changelog 23. März 2022]
