--- a/docs/de-de/modules/payment/pages/paypal.adoc
+++ b/docs/de-de/modules/payment/pages/paypal.adoc
@@ -387,7 +387,7 @@ Im Anschluss an die Aktion *Rückzahlung der PayPal-Zahlung* stehen dir zwei zus
 [#95]
 == PayPal Import - nur ab Version 6.0
 
-Der Eintrag *PayPal Import* mit dem PayPal-Icon in der linken Navigation wird nur angezeigt, wenn das <<payment/payment-plugins/paypal#, PayPal-Plugin>> installiert ist. Dafür ist das PayPal-Plugin mindestens in Version 6.0.0 erforderlich. +
+Der Eintrag *PayPal Import* mit dem PayPal-Icon in der linken Navigation wird nur angezeigt, wenn das PayPal-Plugin installiert ist. Dafür ist das PayPal-Plugin mindestens in Version 6.0.0 erforderlich. +
 Mit der Funktion *PayPal Import* kannst du PayPal-Zahlungen über Transaktionsnummern von deinem PayPal-Konto direkt in dein plentymarkets System importieren. Dabei werden nur neue Zahlungen importiert, es werden keine bereits existierenden Zahlungen aktualisiert. Gehe für den Import wie folgt vor:
 
 [.instruction]
