--- a/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
@@ -28,13 +28,14 @@ Set up the market in plentymarkets.
 [#200]
 === Setting up access to Kaufland.de
 
-Set up Kaufland.de in plentymarkets to offer items on Kaufland.de. To set up Kaufland.de in plentymarkets, you need your Kaufland.de interface access data. You can set up a Kaufland.de account for each plentyShop or client (store).
+Set up Kaufland.de in plentymarkets to offer items on Kaufland.de. To set up Kaufland.de in plentymarkets, you need your Kaufland.de interface access data. You can set up several Kaufland.de accounts for each plentyShop/client (store).
 
 [.instruction]
 Setting up the access to Kaufland.de:
 
 . Go to *Setup » Markets » Kaufland.de » Settings*.
-. Open the submenu of the plentyShop that you would like to set up access for.
+. Open the submenu of the client that you would like to set up access for.
+. Click on *New account*.
 . Carry out the settings. Pay attention to the explanations given in <<#kaufland-de-settings>>.
 . Save (icon:save[set=plenty]) the settings.
 
@@ -44,9 +45,24 @@ Setting up the access to Kaufland.de:
 |====
 |Setting |Explanation
 
+| *Display name of configuration*
+| Enter a meaningful name for this combination of a client (store)/plentyShop and a Kaufland account. If you do not enter a display name, the name `Default` is saved. +
+*_Tip:_* The display name is only used for the list of configurations. As such, the display name’s purpose is to help you better keep track of the list of configurations in the menu *Setup » Markets » Kaufland.de » Settings » [Open client]*.
+
+image::markets:kaufland-display-name.png
+
+| *Back end name* +
+(*_Mandatory field_*)
+| Enter a unique name for this combination of a client (store)/plentyShop and a Kaufland account. The back end name is used in the following areas of the system:
+
+* *_Item export:_* The back end name is exported in a column of CSV files.
+* *_Order import:_* In orders, the back end name is saved as the seller account name in the order property with the ID 10.
+
+*_Important:_* The back end name can no longer be changed after you have saved the configuration for the first time.
+
 | *Activate interface to Kaufland.de*
-a| * *Yes* = Activate the interface to Kaufland.de. +
-* *No* = Do not activate the interface to Kaufland.de.
+a| * *Yes* = Activate the interface to Kaufland.de. Data is exchanged with Kaufland.
+* *No* = Do not activate the interface to Kaufland.de. No data is exchanged with Kaufland.
 
 2+^| API data
 
@@ -66,12 +82,12 @@ a| * *Yes* = Activate the interface to Kaufland.de. +
 *_Important:_* You have to assign each of your service providers to one of the service providers from the drop-down list.
 
 | *Send shipping confirmations via*
-| Up to now, shipping confirmations were sent to Kaufland with an hourly cron. However, this cron is deactivated very soon. As such, set up the event procedure <<#shipping-confirmation, Send shipping confirmation to Kaufland.de>> now and set the option to *event procedure*.
+| Up to now, shipping confirmations were sent to Kaufland with an hourly cron. However, this cron will be deactivated at the beginning of June 2022. As such, set up the event procedure <<#shipping-confirmation, Send shipping confirmation to Kaufland.de>> now and set the option to *event procedure*.
 
 [cols="1,3"]
 !===
 ! *hourly cron*
-! The hourly cron is deactivated very soon. As such, set up the event procedure <<#shipping-confirmation, Send shipping confirmation to Kaufland.de>> now. Then set the option *Send shipping confirmations via* to *event procedure*.
+! The hourly cron will be deactivated at the beginning of June 2022. As such, set up the event procedure <<#shipping-confirmation, Send shipping confirmation to Kaufland.de>> now. Then set the option *Send shipping confirmations via* to *event procedure*.
 
 ! *Event procedure* +
 (recommended)
@@ -175,13 +191,13 @@ The plentymarkets availability IDs 1-10 correspond to the item availabilities de
 |====
 
 [#data-exchange]
-=== Data exchange
+=== Frequency of data exchange
 
 After setting up {market} in plentymarkets, the automatic processes described in <<#data-exchange-market>> are available:
 
 [[data-exchange-market]]
 .Frequency of data exchange
-[cols="2,3a"]
+[cols="1,3a"]
 |====
 |Data |Interval
 
