--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -639,7 +639,7 @@ Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um 
 
 :table-event-procedure: <<#in-fulfillment-kaufland>>
 
-iinclude::_includes:page$EA.adoc[]
+include::_includes:page$EA.adoc[]
 
 [[in-fulfillment-kaufland]]
 .Ereignisaktion, um In-Fulfillment-Bestätigung an {market} zu senden
