--- a/docs/de-de/modules/changelog/pages/2022-04-06.adoc
+++ b/docs/de-de/modules/changelog/pages/2022-04-06.adoc
@@ -6,6 +6,9 @@
 :startWeekDate: 31. März 2022
 :endWeekDate: 06. April 2022
 
+
+//ab diesem Beitrag weitermachen: https://forum.plentymarkets.com/t/auftrag-korrektur-von-eigenschaften-an-auftragspositionen-in-der-ui-fuer-auftraege-abonnements-und-auftragsanlage-order-item-properties-fixes-for-new-order-ui-subscription-ui-and-order-create-ui/676354
+
 Erfahre, was sich in der Woche vom {startWeekDate} bis zum {endWeekDate} bei plentymarkets getan hat. Im Folgenden findest du alle Changelog-Einträge der letzten Woche für stable- und early-Systeme.
 
 Wenn du mehr zu den einzelnen Versionen erfahren oder auf eine andere Version wechseln möchtest, siehe die Handbuchseite xref:business-entscheidungen:versionszyklus.adoc#[Versionszyklus]. Um die Informationen, die auf dieser Seite gesammelt sind, in Echtzeit zu erhalten, abonniere die link:https://forum.plentymarkets.com/c/changelog[Kategorie Changelog in unserem Forum^].
@@ -23,7 +26,7 @@ stable::
 [discrete]
 == Neu
 
-Folgende Neuerungen wurden in den letzten 7 Tagen auf *{{version}}* veröffentlicht.
+Folgende Neuerungen wurden in den letzten 7 Tagen auf *{version}* veröffentlicht.
 
 [discrete]
 === Ereignisaktionen
@@ -45,32 +48,66 @@ Folgende Neuerungen wurden in den letzten 7 Tagen auf *{{version}}* veröffentli
 * Wie du einen Katalog für Kelkoo einrichtest, erfährst du wie immer im xref:maerkte:kelkoo.adoc[plentymarkets Handbuch].
 ======
 
-'''
-
 [discrete]
-== Geändert
+=== Neue Artikel-UI
 
-Folgende Änderungen wurden in den letzten 7 Tagen auf *{{version}}* veröffentlicht.
-
-
+* Die Eigenschaften werden im Verknüpfungsoverlay nun gruppiert angezeigt:
++
+image:changelog:item-ui-groups.png[width=640]
 
 '''
 
 [discrete]
 == Behoben
 
-Folgende Probleme wurden in den letzten 7 Tagen auf *{{version}}* behoben.
+Folgende Probleme wurden in den letzten 7 Tagen auf *{version}* behoben.
 
 [discrete]
 === Aufträge
 
 * Szenario: Auftrag hat eine Fremdwährung, die Zahlung ist in Systemwährung hinterlegt. Für die Berechnung des bezahlten Betrags wurde dann die Zahlung mit dem tagesaktuellem Wechselkurs in die Währung des Auftrags umgerechnet. Das konnte dazu führen, dass der Auftrag nicht exakt zu 100% bezahlt ist. Es wird nun die Zahlung mit dem Wechselkurs des Auftrags umgerechnet.
+
 * Beim Öffnen einer Nachbestellung wurde die Statushistorie nicht geladen. Dies ist nun behoben.
+
+[discrete]
+=== Bestellwesen
+
+* Der Datumsfilter *Erstellt am* wurde nicht korrekt angewendet, wodurch das Suchergebnis nicht entsprechend gefiltert wurde. Dies wurde behoben. Zusätzlich wird der Datumstyp *Erstellt am* automatisch gesetzt, wenn nur ein Zeitraum aber kein Datumstyp gewählt wird.
+
+[discrete]
+=== Dokumentenarchiv
+
+* Durch eine Änderung der Systeme auf PHP 8.0 hat der ZipStream nicht mehr korrekt funktioniert, sodass der Download von Auftragsdokumenten über das Dokumentenarchiv für early und beta7 Systeme fehlschlägt. Dies wurde behoben.
+
+[discrete]
+=== Eigenschaften
+
+* Es kam zu einem Problem, wenn eine Datei mit demselben Namen erneut an einer Dateieigenschaft hochgeladen wurde. Dieses Problem wurde behoben.
+
+[discrete]
+=== EmailBuilder
+
+* Das Auftragspositionen-Widget wurde teilweise in der falschen Sprache dargestellt und versendet. Dieses Verhalten wurde behoben.
+
+[discrete]
+=== Kataloge (Aufträge)
+
+* Es war nicht möglich, mehr als 50.000 Aufträge zu exportieren. Die Aufträge haben sich danach dann wiederholt. Dieses Verhalten wurde behoben.
+
+[discrete]
+=== Neue Artikel-UI
+
+* Bei Backend-Usern bleibt der Haken zur Anzeige der neuen Artikel-UI nun bestehen, nachdem man ihn gespeichert hat.
 
 [discrete]
 === Dokumente
 
 * Der Wert von Bestelleigenschaften vom Typ *Kein* wurde auf den Auftragsdokumenten ausgegeben. Das ist falsch, denn solche Bestelleigenschaften können keinen Wert haben. Wurde aber trotzdem ein Wert bei der Auftragsanlage angegeben, wurde dieser Wert ausgegeben. Nun wird ein möglicherweise vorhandener Wert einer solchen Bestelleigenschaft einfach ignoriert und nicht auf dem Auftragsdokument ausgegeben.
+
+[discrete]
+=== Kontakt-UI
+
+* Es konnte bei gewissen Address-Konstellationen mit primären und nicht-primären Adressen vorkommen, dass beim Anlegen neuer Aufträge eine Fehlermeldung erscheint. Dieses Verhalten wurde nun korrigiert.
 
 [discrete]
 === Prozesse
@@ -89,26 +126,48 @@ early::
 [discrete]
 == Neu
 
-Folgende Neuerungen wurden in den letzten 7 Tagen auf *{{version}}* veröffentlicht.
-
-
-
-'''
+Folgende Neuerungen wurden in den letzten 7 Tagen auf *{version}* veröffentlicht.
 
 [discrete]
-== Geändert
+=== Amazon
 
-Folgende Änderungen wurden in den letzten 7 Tagen auf **{{version}}** veröffentlicht.
+* Im Menü *Einrichtung » Märkte » Amazon » Einstellungen » [Amazon-Konto wählen] » Tab: Artikeleinstellungen* wurde im Bereich *Exporteinstellungen* die Einstellung *Verlängerte Bearbeitungszeit aktivieren* hinzugefügt. Wenn du diese Einstellung aktivierst, kannst du die maximale Bearbeitungszeit von Amazon-Aufträgen von 30 auf bis zu 120 Tage verlängern.
++
+*_Hinweis:_* Um die Einstellung *Verlängerte Bearbeitungszeit aktivieren* nutzen zu können, musst du bei Amazon dafür freigeschaltet sein.
 
+[discrete]
+=== Kataloge
 
+* In den Katalogen (*Daten » Kataloge*) steht nun ein Format zur Verfügung, um Zahlungen zu exportieren. Weitere Informationen findest du xref:daten:zahlungen-exportieren.adoc[im plentymarkets Handbuch]
 
 '''
 
 [discrete]
 == Behoben
 
-Folgende Probleme wurden in den letzten 7 Tagen auf *{{version}}* behoben.
+Folgende Probleme wurden in den letzten 7 Tagen auf *{version}* behoben.
 
+[discrete]
+=== Auftragsdokumente
+
+* Unter bestimmten Konstellationen wurden der Hinweis zur Differenzbesteuerung und zum Reverse Charge zusammen ausgegeben, obwohl nur einer der Hinweise richtig ist. Dies wurde behoben.
+
+* Die Sichtbarkeit der Bestelleigenschaften auf den Auftragsdokumenten (Rechnung, Lieferschein etc.) wurde nicht korrekt behandelt. Dies wurde behoben.
+
+[discrete]
+=== Bestellwesen
+
+* In einigen Fällen konnte es vorkommen, dass die Vorlage für die Nachbestellung an eine falsche E-Mail-Adresse gesendet wurde. Dieser Fehler wurde jetzt behoben.
+
+[discrete]
+=== E-Mails
+
+* Die E-Mail-Variable `$MethodOfPaymentName` zeigte bei Zahlungsarten, die direkt von einem Marktplatz kamen, keinen Wert an. Dieses Verhalten wurde behoben.
+
+[discrete]
+=== Kontakte
+
+* In der (alten) Kontakt-UI werden die primären Sterne an den Tags der Liefer- und Rechnungsadressen jetzt wieder angezeigt.
 
 
 --
@@ -123,9 +182,29 @@ Folgende Plugins wurden in den letzten 7 Tagen in einer neuen Version auf plenty
 |===
 |Plugin-Name |Version |To-do
 
-|
-|
-|
+|link:https://marketplace.plentymarkets.com/multicontentwidget_6082[Multicontent Toolbox^]
+|4.7.6
+|-
+
+|link:https://marketplace.plentymarkets.com/plentydevtool_6652[plentyDevTool^]
+|1.5.0
+|-
+
+|link:https://marketplace.plentymarkets.com/formatdesigner_6483[FormatDesigner^]
+|1.2.4
+|-
+
+|link:https://marketplace.plentymarkets.com/enderecoaddressautocomplete_6622[Endereco Address Autocomplete^]
+|2.1.0
+|-
+
+|link:https://marketplace.plentymarkets.com/filterdrop_6603[FilterDrop^]
+|4.0.3
+|-
+
+|link:https://marketplace.plentymarkets.com/wesiocatalog_6759[Kataloggenerator^]
+|1.1.2
+|-
 
 |===
 
