--- a/docs/de-de/modules/artikel/pages/barcodes.adoc
+++ b/docs/de-de/modules/artikel/pages/barcodes.adoc
@@ -411,8 +411,9 @@ Grundpreis
 *_Hinweis_*: Wird der UVP gewählt, wird unabhängig vom gewählten Verkaufspreis immer der UVP der Variante ausgegeben.
 
 !Verkaufspreis
-!Entscheide, welcher Verkaufspreis angezeigt werden soll.
-Ist als Preistyp *Verkaufspreis* eingestellt, wird der Betrag dieses Preises nur dann von der Variante gezogen, wenn in der Auftragsposition kein Preis hinterlegt ist; ansonsten wird der Preis aus der Auftragsposition genommen. +
+!Entscheide, welcher Verkaufspreis angezeigt werden soll. +
+*_Hinweis_*: Ist als Preistyp *Verkaufspreis* eingestellt, wird der Betrag dieses Preises nur dann von der Variante gezogen, wenn in der Auftragsposition kein Preis hinterlegt ist; ansonsten wird der Preis aus der Auftragsposition genommen. +
+Dieser Hinweis gilt nur dann, wenn die Etiketten zu einem Auftrag erzeugt werden. Etiketten können in diesem Fall aus dem Auftrag heraus oder aus der Vorschau erzeugt werden.
 
 !===
 
