--- a/docs/de-de/modules/maerkte/partials/zalando-faq.adoc
+++ b/docs/de-de/modules/maerkte/partials/zalando-faq.adoc
@@ -8,11 +8,10 @@ Wie kann ich am Partnerprogramm von Zalando teilnehmen?::
     Um am Partnerprogramm von Zalando teilzunehmen, wende dich direkt an link:https://www.zalando.de/zms/zalando-partner-program/[Zalando^].
 
 Wie geht es nach der Registrierung beim Zalando-Partnerprogramm weiter?::
-    Melde dich im link:https://forum.plentymarkets.com/t/sammelthema-collective-thread-csv-formular-zum-abgleichen-von-artikeln-silhouetten-csv-form-for-synchronization-of-articles-silhouettes/669460[plentymarkets Forum^]. Dort erhältst du von unserem Support-Team ein Formular im CSV-Format. Dieses Formular enthält die folgenden Informationen: +
-    
+    Melde dich im link:https://forum.plentymarkets.com/t/sammelthema-collective-thread-csv-formular-zum-abgleichen-von-artikeln-silhouetten-csv-form-for-synchronization-of-articles-silhouettes/669460[plentymarkets Forum^]. Dort erhältst du von unserem Support-Team ein Formular im CSV-Format. Dieses Formular enthält die folgenden Informationen:
     * Routen für Artikel
     * Benutzernamen und Kennwort
-    * Zugangsdaten zum plentymarkets FTP-Server für Silhouetten +
+    * Zugangsdaten zum plentymarkets FTP-Server für Silhouetten
     *_Hinweis:_* Auf diesen FTP-Server sendet Zalando deine Silhouetten, damit sie in dein plentymarkets System importiert werden können. plentymarkets importiert die Silhouetten jeden Mittwoch.
 
     +
@@ -37,8 +36,7 @@ Mein Zalando-Konto wurde noch nicht aktiviert.::
 
 [qanda]
 Welche Einstellungen müssen vorgenommen werden, damit ein Artikel zu Zalando exportiert werden kann?::
-    Die folgenden Einstellungen müssen für den Artikelexport zu Zalando vorgenommen werden: +
-
+    Die folgenden Einstellungen müssen für den Artikelexport zu Zalando vorgenommen werden:
     * Im *Tab: Verfügbarkeit* der jeweiligen Variante müssen die Verfügbarkeiten *Zalando* und *WEB-API* aktiviert sein. (<<#300, Wie?>>)
     * Die Variante muss *aktiv* sein.
     * Die Variante hat einen für Zalando definierten Verkaufspreis. (<<#350, Wie?>>)
@@ -46,8 +44,7 @@ Welche Einstellungen müssen vorgenommen werden, damit ein Artikel zu Zalando ex
 
 Warum werden meine Artikel nicht zu Zalando exportiert?::
     Entweder wurden nicht alle Grundeinstellungen für den Marktplatz vorgenommen oder die Pflichtfelder für Zalando sind nicht ausgefüllt. +
-    Dies sind die Pflichtfelder für Zalando: +
-    
+    Dies sind die Pflichtfelder für Zalando:
     * 1 Farbcode
     * Altersgruppe(n)
     * Geschlecht
@@ -74,14 +71,11 @@ Warum werden meine Artikel nicht aktualisiert?::
 Wo finde ich die Berichte von Zalando?::
     Die Berichte findest du in deinem plentymarkets System im Menü *Einrichtung » Märkte » Zalando » Einstellungen » Tab: Verarbeitungsberichte*.
 
-
 Export Log *zalandoArticleExportLog.txt*::
     Das Export-Log *zalandoArticleExportLog.txt* enthält Log-Einträge für Varianten. Das Export-Log wird einmal pro Nacht automatisch generiert. Die Datei enthält Einträge für erfolgreich exportierte Varianten und für Varianten, die nicht zu Zalando exportiert werden konnten. So kannst du das <<#905, Export-Log herunterladen>>.
 
-
 Artikelstatusberichte *ProductErrorReport.csv* und *ProductLiveReport.csv*::
-    Die Artikelstatusberichte werden einmal pro Nacht von Zalando generiert. Die Berichte enthalten nur Informationen zu Varianten, die erfolgreich zu Zalando exportiert wurden. So kannst du die <<#910, Produkt-Statusberichte herunterladen>>. +
-    
+    Die Artikelstatusberichte werden einmal pro Nacht von Zalando generiert. Die Berichte enthalten nur Informationen zu Varianten, die erfolgreich zu Zalando exportiert wurden. So kannst du die <<#910, Produkt-Statusberichte herunterladen>>.
     * Der Bericht *ProductErrorReport.csv* enthält Varianten, die seit dem letzten Export nicht auf Zalando verkauft werden konnten. Der Bericht wird einmal pro Nacht automatisch generiert.
     * Der Bericht *ProductLiveReport.csv* enthält Varianten, die seit dem letzten Export auf Zalando verkauft werden konnten, sowie Bestand und Preis jeder Variante auf den Zalando-Channels (DE, FR usw.) zu dem Zeitpunkt, zu dem die Datei generiert wurde. Der Bericht wird einmal pro Nacht automatisch generiert.
 
@@ -103,8 +97,7 @@ errors (1234567) (ValueId:12345): ageGroups::
     Das Merkmal *Zalando » Altersgruppe* für die VariantenID (=ValueID) fehlt.
 
 errors (1234567) (ValueId:12345): sizeRegister::
-    Das Merkmal *Zalando » Größen-Register* fehlt oder wurde nicht korrekt angelegt. +
-    
+    Das Merkmal *Zalando » Größen-Register* fehlt oder wurde nicht korrekt angelegt.
     * _Fall 1:_ Das Merkmal fehlt. +
     Das Merkmal muss hinzugefügt und mit dem entsprechenden Größenregister gepflegt werden.
     * _Fall 2:_ Das Merkmal ist gepflegt. +
@@ -155,8 +148,7 @@ PSERR_133 - Submitted size isn’t an allowed value for the size chart being sub
 
 PSERR_118 - EAN rejected because the sum of the material composition is not 100%. Please review the sum of material composition within the attribute.::
     Mit Merkmalen speicherst du am Artikel die Materialangaben. Mit einem Markemal vom Typ *Text* gibst du an, zu wie viel Prozent der Artikel aus dem gewähltem Material besteht. +
-    *_Hinweis:_* Du musst abschließend immer auf 100% kommen. Die Materialangaben werden im Export jedoch in 100,00% erwartet. Das bedeutet, dass du zum Beispiel bei 80% Polyester und 20% Baumwolle die folgenden Werte eintragen musst: +
-
+    *_Hinweis:_* Du musst abschließend immer auf 100% kommen. Die Materialangaben werden im Export jedoch in 100,00% erwartet. Das bedeutet, dass du zum Beispiel bei 80% Polyester und 20% Baumwolle die folgenden Werte eintragen musst:
     * Polyester: “8000”
     * Baumwolle: “2000”
     
@@ -175,12 +167,9 @@ PSERR_118 - EAN rejected because the sum of the material composition is not 100%
 Wie kann ich die Übertragung der Preise prüfen?::
     Für eine Übersicht der von Zalando empfangenen Preis-Updates der letzten 7 Tage und deren Bearbeitungsstatus kannst du im Menü *Einrichtung » Märkte » Zalando » Einstellungen » Tab: Verarbeitungsberichte » Preis-Berichte* entsprechende Berichte herunterladen. Beachte, dass Zalando den Preis erst im Status *Submitted* übernimmt. Den Bericht kannst du jederzeit aktualisieren, der Zeitraum ist aber fest definiert. +
     Solltest du darüber hinaus Preis-Aktualisierungen vermissen oder die übertragenen Werte dir nicht richtig erscheinen, kannst du dies zusätzlich im Log prüfen. Öffne dazu das Menü *Daten » Log*. +
-    Stelle die folgenden Filter ein: +
-
+    Stelle die folgenden Filter ein:
     * *Integration*: Plenty\Modules\Zalando\Prices\Services\PriceUpdateService
     * *Identifikator*: Zalando
-    
-    +
     Als *Referenztyp* kannst du zum Beispiel die *Varianten-ID* oder die *EAN* wählen. Trage dazu als Referenztyp den Wert *variationID* oder *ean* ein und verwende den entsprechenden Value als *Referenzwert*. +
     Öffne anschließend den Logeintrag und klicke auf *Alle expandieren*, um den Inhalt des jeweiligen Requests einzusehen. +
     Ob Zalando diese Meldung erfolgreich angenommen hat, sehen wir im Response. Dieser wird in einem separaten Log geschrieben. Du findest im folgenden Screenshot eine *jobId*: +
@@ -214,12 +203,9 @@ Wie kann ich eine erneute Preisübertragung für alle Varianten auslösen?::
 [qanda]
 Wie kann ich die Übertragung der Bestände prüfen?::
     Öffne das Menü *Daten » Log*. +
-    Stelle die folgenden Filter ein: +
-
+    Stelle die folgenden Filter ein:
     * *Integration*: Plenty\Modules\Zalando\Stock\Services\StockUpdateService
     * *Identifikator*: Zalando
-    
-    +
     Als Referenztyp kannst du zum Beispiel die *Varianten-ID* oder die *EAN* wählen. Trage dazu als Referenztyp den Wert *variationID* oder *ean* ein und verwende den entsprechenden Value als Referenzwert. +
     Öffne den Logeintrag und klicke auf *Alle expandieren*, um den Inhalt des jeweiligen Requests einzusehen. +
     Als *quantity* wird der übermittelte Bestand angezeigt. +
@@ -250,7 +236,7 @@ Wie kann ich eine erneute Bestandsübertragung für alle Varianten auslösen?::
 
 In einigen Fällen kann es unter Umständen zu Fehlermeldungen bei der Verarbeitung der Aufträge kommen. Mögliche Ursachen und häufige Fehler werden hier beschrieben. +
 
-Um den Verlauf deines Auftrags einzusehen, kannst du im Menü *Daten » Log* die folgenden Filter verwenden: +
+Um den Verlauf deines Auftrags einzusehen, kannst du im Menü *Daten » Log* die folgenden Filter verwenden:
 
 * *Identifikator*: Zalando
 * *Referenztyp*: orderId / externalOrderId
@@ -259,15 +245,13 @@ Um den Verlauf deines Auftrags einzusehen, kannst du im Menü *Daten » Log* die
 [qanda]
 Die Versandbestätigungen für meine Aufträge fehlen oder wurden nicht an Zalando gemeldet. Wo finde ich die Fehler dazu im Log?::
     Wenn eine Versandbestätigung nicht an Zalando gesendet wurde, öffne das Menü *Daten » Log*. +
-    Stelle die folgenden Filter ein: +
-    
+    Stelle die folgenden Filter ein:
     * *Integration*: Plenty\Modules\Zalando\Orders\Procedures\OrderShippingProcedure
     * *Identifikator*: Zalando
     * *Level*: error
     
     +
-    Bei Bedarf kann zusätzlich nach der Order-ID oder der externen Order-ID gefiltert werden: +
-    
+    Bei Bedarf kann zusätzlich nach der Order-ID oder der externen Order-ID gefiltert werden:
     * *Referenztyp*: orderId / externalOrderId
     * *Referenzwert*: deine Order-ID / deine externe Order-ID
 
@@ -280,8 +264,7 @@ Die Versandbestätigungen für meine Aufträge fehlen oder wurden nicht an Zalan
 
 [qanda]
 Keine Rücksendenummer gefunden.::
-    Hierfür kann es zwei Gründe geben: +
-    
+    Hierfür kann es zwei Gründe geben:
     * _Erstens:_ Für den Auftrag existiert zwar eine Paketnummer, aber keine Retouren-Tracking-Number (Retourenlabel). +
     *_Analyse:_* Überprüfe dies im Menü *Aufträge » Versand-Center*. Retourenlabels werden nach der Suche des jeweiligen Auftrags im *Tab: Retourenetiketten* angezeigt. +
     *_Lösung:_* Sollte kein Etikett vorliegen, muss dieses Etikett nachträglich erstellt werden und der Versand erneut gemeldet werden.
@@ -302,8 +285,7 @@ Die Silhouetten wurden in plentymarkets nicht aktualisiert/importiert.::
     Zalando sendet (neue) Silhouetten auf den plentymarkets FTP-Server, damit sie in dein plentymarkets System importiert werden können. Neue Silhouetten werden wöchentlich (mittwochs) von uns aktualisiert und können anschließend von dir in Merkmale konvertiert werden. +
     Nutze dazu die Funktion *in Merkmale konvertieren*. Solltest du diesen Schritt zum ersten Mal durchlaufen und es sieht folgendermaßen aus: +
     image:maerkte:zalando-faq-silhouetten.png[]
-    Dann liegt es entweder daran, dass +
-    
+    Dann liegt es entweder daran, dass
     * Zalando noch keine Silhouetten für dich übersendet hat _oder_
     * plentymarkets deine Silhouetten noch nicht importiert hat.
     
