Added chapter about deleting items

--- a/docs/de-de/modules/maerkte/pages/idealo-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/idealo-einrichten.adoc
@@ -738,8 +738,28 @@ Merkmal vom Typ *Text*, *Auswahl* oder *Kommazahl* und der Verknüpfung zum idea
 
 | *Zahlungsarten*
 | *Pflichtfeld*: (Mindestens eine Zahlungsart) +
-Es werden die Zahlungsarten gemäß der Formateinstellung *Versandkosten* in einer eigenen Spalte übermittelt.
+Die Zahlungsarten werden gemäß der Formateinstellung *Versandkosten* in einer eigenen Spalte übermittelt.
 |====
+
+[#idealo-delete-items]
+== Artikel bei idealo löschen
+
+Wenn du einen Artikel nicht mehr auf idealo verkaufen möchtest, musst du an der Variante die Verfügbarkeit für den Marktplatz entfernen.
+
+[.instruction]
+Verfügbarkeit entfernen:
+
+. Öffne das Menü *Artikel » Artikel bearbeiten » [Artikel öffnen] » [Variante öffnen] » Varianten-Tab: Verfügbarkeit*.
+. *Lösche* (icon:minus-circle[role="red"]) die Verfügbarkeiten *idealo* und *idealo Direktkauf*.
+. *Speichere* (icon:save[set=plenty]) die Einstellungen. +
+→ Die Variante wird in den nächsten 15 Minuten bei idealo gelöscht und kann dort nicht mehr gekauft werden.
+
+[TIP]
+.Zeitstempel für Marktplatzexporte aktualisieren
+====
+Wenn du sicherstellen möchtest, dass die Variante sofort bei idealo gelöscht wird, kannst du zusätzlich mit der *Artikel-Gruppenfunktion* den *Zeitstempel für Marktplatzexporte aktualisieren*.
+Öffne dazu das Menü *Artikel » Artikel bearbeiten » Tab: Artikel-Gruppenfunktion*. Setze ein Häkchen bei *Zeitstempel für Marktplatzexporte aktualisieren* und klicke auf icon:execute[set=plenty] *Ausführen*. Die Variante wurde gelöscht und kann nun nicht mehr auf idealo gekauft werden.
+====
 
 [#1100]
 == Zahlungsart idealo Direktkauf aktivieren
