add EN and fix date formats

--- a/docs/en-gb/modules/business-decisions/pages/eol.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/eol.adoc
@@ -16,29 +16,23 @@ This overview does not replace the xref:changelog:changelog.adoc#[changelog] or 
 |====
 |Area/function |End of software maintenance |End of provisioningfootnote:[Date from which the function is no longer available] |Further information |Announcement date
 
-| *Shopwareconnector PSC7 (Arvatis)*
-|01-Jan-2020
-|tba
-|
-|01-Jun-2021
-
-| *Ceres plugin versions below 5.0.0*
-|14-April-2020
-|31.-Oct-2021
-|link:https://forum.plentymarkets.com/t/eol-ankuendigung-ceres-versionen-unterhalb-von-5-nicht-mehr-unterstuetzt-jetzt-umsteigen-auf-5-0-35/646505[Forum link^]
-|22-Jul-2021
-
-| *Old property interfaces*
-|31-March-2022
-|31-March-2022
-|link:https://forum.plentymarkets.com/t/ankuendigung-eol-alte-eigenschaften-announcement-eol-old-properties/648316[Link zum Forum^]
-|09-Aug-2021
+| *plentymarkets logo (Start) » Boards* menu
+|13-Apr-2022
+|starting on 13-April-2022 (successive removal)
+|link:https://forum.plentymarkets.com/t/ankuendigung-eol-boards-announcement-eol-boards/676479[Forum link^]
+|07-Apr-2022 
 
 | *Orders » Payments [Deprecated]* menu
 |06-July-2022
 |06-July-2022
 |link:https://forum.plentymarkets.com/t/ankuendigung-abschaltung-alte-benutzeroberflaeche-zahlungsverkehr-announcement-abandonment-of-old-user-interface-payments/655278[Forum link^]
 |07-Apr-2022
+
+| *Shopwareconnector PSC7 (Arvatis)*
+|01-Jan-2020
+|tba
+|
+|01-Jun-2021
 
 |====
 
@@ -50,6 +44,18 @@ This overview does not replace the xref:changelog:changelog.adoc#[changelog] or 
 [cols="3,1,1,1,1"]
 |====
 |Area/function |End of software maintenance |End of provisioningfootnote:[Date from which the function is no longer available] |Further information |Announcement date
+
+| *Old property interfaces*
+|31-Mar-2022
+|31-Mah-2022
+|link:https://forum.plentymarkets.com/t/ankuendigung-eol-alte-eigenschaften-announcement-eol-old-properties/648316[Link zum Forum^]
+|09-Aug-2021
+
+| *Ceres plugin versions below 5.0.0*
+|14-Apr-2020
+|31-Oct-2021
+|link:https://forum.plentymarkets.com/t/eol-ankuendigung-ceres-versionen-unterhalb-von-5-nicht-mehr-unterstuetzt-jetzt-umsteigen-auf-5-0-35/646505[Forum link^]
+|22-Jul-2021
 
 | *Non-Plugin payment methods*
 |01-Jun-2021
@@ -131,7 +137,7 @@ This overview does not replace the xref:changelog:changelog.adoc#[changelog] or 
 
 | *ElasticSync (legacy) & FormatDesigner (legacy)*
 |15-Nov-2019
-|04-March-2020
+|04-Mar-2020
 |link:https://forum.plentymarkets.com/t/abschaltung-formatdesigner-legacy/576363[Forum link^]
 |30-Jan-2020
 
@@ -283,7 +289,7 @@ a|SOAP calls *Listings* +
 * UpdateListingsUpdate +
 * UpdateListingsVerify
 |01-Feb-2017
-|27.02.2019
+|27-Feb-2019
 |https://forum.plentymarkets.com/t/ankuendigung-schrittweise-abschaltung-der-soap-api/526661[Forum link^]
 |28-Jan-2019
 
