--- a/docs/de-de/modules/maerkte/partials/awin-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/awin-recommended-mappings.adoc
@@ -44,9 +44,9 @@ _oder_
 | Alternative Bild-URL
 | nein
 | * *Bild » Varianten Bilder » Einzelbild*
-  ** *Bildinformation: Vollbild-URL* wählen
+  ** *Bildinformation:* *Vollbild-URL* wählen
   ** *Bildposition:* Position eines Bilds wählen
-  ** *Auftragsherkunft: {market}* wählen
+  ** *Auftragsherkunft:* *{market}* wählen
   ** *Listing:* Keine Option wählen
   ** *Mandant:* Mandanten wählen, über den du bei {market} verkaufst.
 
