--- a/docs/en-gb/modules/markets/pages/awin.adoc
+++ b/docs/en-gb/modules/markets/pages/awin.adoc
@@ -1,28 +1,41 @@
 = Awin.com
 :author: team-plenty-channel
-:keyword: Awin.com, Awin.com, Awin, Awin
+:keywords: AWIN, AWIN, AWIN.com, AWIN.com
 :description: Multi-Channel in plentymarkets: Set up the item data export to AWIN in your plentymarkets system.
 :id: Q1P9Y6V
 
+:awin:
+:market: Awin
 :price-search-engine: Awin
 :plugin-name: Awin.com
 :plugin-link: https://marketplace.plentymarkets.com/en/plugins/channels/preisportale/elasticexportawincom_4762
 
-include::partial$plugin-download.adoc[]
-
-
-[#100]
-== Registering with Awin.com
-
 Awin.com (formerly zanox.de) offers performance-based online and affiliate marketing.
 
+[#item-export]
+== Exporting item data
+
+* <<#old-export, _Alternative 1:_ Item export with the Elastic Export _(old method)_>>
+* <<#catalogue-export, _Alternative 2:_ Catalogue export _(recommended method)_>>
+* <<#change-elastic-export-catalogue, _Alternative 3:_ Changing from elastic export to catalogue>>
+
+[#old-export]
+=== _Alternative 1:_ Export format AwinCOM-Plugin _(old method)_
+
+NOTE: No new features are planned for the Elastic Export and the export formats. As such, we recommend that you <<#catalogue-export, create catalogues instead>>.
+
+[#plugin-download]
+==== Downloading and installing the plugins
+
+include::partial$plugin-download.adoc[]
+
 [#200]
-== Setting up the data format AwinCOM-Plugin in plentymarkets
+==== Setting up the AwinCOM plugin in plentymarkets
 
 :export-format: AwinCOM-Plugin
 :price-search-engine: Awin.com
 :table-price-search-engine: <<#export-format>>
-:file-format: pass:quotes[*.csv* oder *.txt*]
+:file-format: pass:quotes[*.csv* or *.txt*]
 
 :preview:
 :description:
@@ -34,10 +47,10 @@ Awin.com (formerly zanox.de) offers performance-based online and affiliate marke
 :select-image:
 :overwrite:
 
-include::partial$export-formats.adoc[]
+include::partial$exportformate.adoc[]
 
 [#300]
-== Available columns for the export file
+==== Available columns for the export file
 
 :export-format: AwinCOM-Plugin
 
@@ -98,9 +111,77 @@ include::markets:partial$download_export-file.adoc[]
 |The unit based on the base_price.
 |====
 
-[#400]
-== License
+[#catalogue-export]
+=== _Alternative 2:_ Catalogue export _(recommended method)_
 
-:license-link: https://github.com/plentymarkets/plugin-elastic-export-awin-com/blob/master/LICENSE.md
+Catalogue formats provide you with a long-term and flexible way to export your item data to {market}.
 
-include::partial$plugin-license.adoc[]
+[#catalogue-creation]
+==== Creating a catalogue
+
+Item data is exported using a marketplace format. To export your items to a price search engine, create a catalogue in the *Data » Catalogue* menu. Link the data fields in the catalogue with item data saved in plentymarkets in the marketplace format afterwards.
+
+include::partial$catalogue-new-to-text.adoc[]
+
+:catalogue-template-name: awin
+:format-item-new:
+
+include::partial$catalogue-creation.adoc[]
+
+[#data-field-mappings]
+==== Mapping data fields in the catalogue
+
+Now, map the data fields in the catalogue to the item data saved in plentymarkets.
+
+include::partial$catalogue-mapping.adoc[]
+
+[#recommended-mappings]
+==== Recommendations for data field mappings
+
+include::partial$recommendation-text.adoc[]
+
+* Get more information about the marketplace data field in the link:https://wiki.awin.com/index.php/Datafeed_Guide/[{market} documentation].
+
+[.collapseBox]
+.List of recommended data field mappings
+--
+include::partial$awin-recommended-mappings.adoc[]
+--
+
+[#filter-export]
+==== _Optional:_ Exporting specific items
+
+include::partial$catalogue-filters.adoc[]
+
+[#catalogue-settings]
+==== Setting up catalogue export
+
+:csv-txt:
+include::partial$catalogue-settings.adoc[]
+
+[#catalogue-activation]
+==== Activating the catalogue
+
+:interval:
+
+include::partial$catalogue-activation.adoc[]
+
+[#catalogue-url]
+==== Exporting catalogue data to {market}
+
+include::partial$catalogue-url.adoc[]
+
+[#change-elastic-export-catalogue]
+=== _Alternative 3:_ Changing from elastic export to catalogue
+
+:elastic-export-catalogue-mappings:
+include::partial$catalogue-change-from-elastic-export.adoc[]
+
+[[elastic-export-catalogue-mappings]]
+.Columns and data fields
+[cols="1,1"]
+|====
+|Column in elastic export |Data field in catalogue
+
+
+|====
