--- a/docs/de-de/modules/maerkte/partials/tracdelight-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/tracdelight-recommended-mappings.adoc
@@ -27,9 +27,9 @@ _oder_
 | Bild-URL
 | ja
 | * *Bild » Varianten Bilder » Einzelbild*
-  ** *Bildinformation: Vollbild-URL* wählen
+  ** *Bildinformation:* *Vollbild-URL* wählen
   ** *Bildposition:* Position des Hauptbilds wählen
-  ** *Auftragsherkunft: {market}* wählen
+  ** *Auftragsherkunft:* *{market}* wählen
   ** *Listing:* Keine Option wählen
   ** *Mandant:* Mandanten wählen, über den du bei {market} verkaufst.
 
@@ -92,36 +92,36 @@ _oder_
 | Bild-URL 2
 | nein
 | * *Bild » Varianten Bilder » Einzelbild*
-  ** *Bildinformation: Vollbild-URL* wählen
+  ** *Bildinformation:* *Vollbild-URL* wählen
   ** *Bildposition:* Position eines Bilds wählen
-  ** *Auftragsherkunft: {market}* wählen
+  ** *Auftragsherkunft:* *{market}* wählen
   ** *Listing:* Keine Option wählen
   ** *Mandant:* Mandanten wählen, über den du bei {market} verkaufst.
 
 | Bild-URL 3
 | nein
 | * *Bild » Varianten Bilder » Einzelbild*
-  ** *Bildinformation: Vollbild-URL* wählen
+  ** *Bildinformation:* *Vollbild-URL* wählen
   ** *Bildposition:* Position eines Bilds wählen
-  ** *Auftragsherkunft: {market}* wählen
+  ** *Auftragsherkunft:* *{market}* wählen
   ** *Listing:* Keine Option wählen
   ** *Mandant:* Mandanten wählen, über den du bei {market} verkaufst.
 
 | Bild-URL 4
 | nein
 | * *Bild » Varianten Bilder » Einzelbild*
-  ** *Bildinformation: Vollbild-URL* wählen
+  ** *Bildinformation:* *Vollbild-URL* wählen
   ** *Bildposition:* Position eines Bilds wählen
-  ** *Auftragsherkunft: {market}* wählen
+  ** *Auftragsherkunft:* *{market}* wählen
   ** *Listing:* Keine Option wählen
   ** *Mandant:* Mandanten wählen, über den du bei {market} verkaufst.
 
 | Bild-URL 5
 | nein
 | * *Bild » Varianten Bilder » Einzelbild*
-  ** *Bildinformation: Vollbild-URL* wählen
+  ** *Bildinformation:* *Vollbild-URL* wählen
   ** *Bildposition:* Position eines Bilds wählen
-  ** *Auftragsherkunft: {market}* wählen
+  ** *Auftragsherkunft:* *{market}* wählen
   ** *Listing:* Keine Option wählen
   ** *Mandant:* Mandanten wählen, über den du bei {market} verkaufst.
 
