conrad - event procedure order - DE+EN

--- a/docs/de-de/modules/maerkte/partials/mirakl-EP-shipping-confirmation.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-EP-shipping-confirmation.adoc
@@ -26,5 +26,11 @@ include::_includes:page$EA.adoc[]
 
 | *Aktion 2*
 | *Plugins > {market}: Versand eines Auftrags validieren*
+
+*_Wichtig:_* Halte die Reihenfolge der Aktionen ein. Nur so wird die Ereignisaktion korrekt ausgeführt.
+
+ifdef::conrad[]
+image::maerkte:conrad-ea-reihenfolge.png
+endif::conrad[]
 |
 |===
