fix include link

--- a/docs/en-gb/modules/markets/pages/awin.adoc
+++ b/docs/en-gb/modules/markets/pages/awin.adoc
@@ -47,7 +47,7 @@ include::partial$plugin-download.adoc[]
 :select-image:
 :overwrite:
 
-include::partial$exportformate.adoc[]
+include::partial$export-formats.adoc[]
 
 [#300]
 ==== Available columns for the export file
