--- a/docs/en-gb/modules/markets/pages/tracdelight.adoc
+++ b/docs/en-gb/modules/markets/pages/tracdelight.adoc
@@ -43,7 +43,7 @@ include::partial$plugin-download.adoc[]
 :select-image:
 :overwrite:
 
-include::partial$exportformate.adoc[]
+include::partial$export-formats.adoc[]
 
 [#300]
 ==== Available columns for the export file
