--- a/docs/de-de/modules/payment/pages/paypal.adoc
+++ b/docs/de-de/modules/payment/pages/paypal.adoc
@@ -459,7 +459,7 @@ Achtung: Die Plugin-Set Vorschau darf während des Verknüpfens des PayPal-Konto
 ======
 
 .Rückleitung zu plentymarkets ist nicht möglich
-image::payment:paypal-plugin-fehlermeldung_fehler1.png[Plugin Fehlermeldung]
+image::payment:paypal-plugin-error-1.png[Plugin Fehlermeldung]
 
 [%interactive]
 * *Lösung 1:* Wechsele den Browser und versuche es erneut. plentymarkets unterstützt die Browser Google Chrome und Mozilla Firefox.
