--- a/docs/en-gb/modules/payment/pages/paypal.adoc
+++ b/docs/en-gb/modules/payment/pages/paypal.adoc
@@ -123,7 +123,7 @@ The PayPal Express Checkout Button and the Banners for PayPal Installment are av
 [IMPORTANT]
 .Information about linking containers
 ====
-The containers needed by default are automatically linked during setup with the PayPal assistant.  Version 5.4.0 and upFrom version 5.4.0 on, required as well as optional containers are linked in the same plugin set in which the assistant is completed.
+The containers needed by default are automatically linked during setup with the PayPal assistant. From version 5.4.0 on, required as well as optional containers are linked in the same plugin set in which the assistant is completed.
 ====
 
 [tabs]
