Fix links and screenshots

--- a/docs/de-de/modules/payment/pages/paypal.adoc
+++ b/docs/de-de/modules/payment/pages/paypal.adoc
@@ -633,14 +633,16 @@ Die folgende Tabelle erklärt die Möglichkeiten, die dir offen stehen, um auf g
 
 |*Kund:in hat den Artikel nicht erhalten*
 |Es wird gemeldet, dass der Artikel nicht angekommen ist. Das Problem befindet sich zunächst im Eskalationslevel Dispute und du hast 3 Möglichkeiten darauf zu reagieren. Je nachdem wie du reagierst, ergeben sich weitere Schritte.
-|Die 3 grundlegenden Reaktionsmöglichkeiten sind: +
+a|Die 3 grundlegenden Reaktionsmöglichkeiten sind: +
+
 * Nachricht an Kund:in schreiben +
 * als Konflikt behandeln und die Forderung annehmen +
 * als Konflikt behandeln und PayPal zur Klärung einschalten
 
 |*Kund:in meldet, dass der Artikel nicht wie beschrieben ist*
 |Es wird gemeldet, dass der erhaltene Artikel nicht wie beschrieben ist. Das Problem befindet sich zunächst im Eskalationslevel Dispute und du hast 6 Möglichkeiten darauf zu reagieren. Je nachdem wie du reagierst, ergeben sich weitere Schritte.
-|Die 6 grundlegenden Reaktionsmöglichkeiten sind: +
+a|Die 6 grundlegenden Reaktionsmöglichkeiten sind: +
+
 * Nachricht and Kund:in schreiben +
 * als Konflikt behandeln und die Forderung annehmen +
 * als Konflikt behandeln und ein Angebot über eine vollständige Rückzahlung mit Rücksendung des Artikels machen +
@@ -650,7 +652,8 @@ Die folgende Tabelle erklärt die Möglichkeiten, die dir offen stehen, um auf g
 
 |*Kund:in hat eine nicht autorisierte Transaktion gemeldet*
 |Es wird gemeldet, dass der Artikel nicht gekauft wurde und der Kontozugriff unbefugt war. Das Problem befindet sich von Anfang an im Eskalationslevel Claim, d.h. dein:e Kund:in hat Käuferschutz beantragt. Du hast 2 Möglichkeiten darauf zu reagieren. Je nachdem wie du reagierst, ergeben sich weitere Schritte.
-|Die 2 grundlegenden Reaktionsmöglichkeiten sind: +
+a|Die 2 grundlegenden Reaktionsmöglichkeiten sind: +
+
 * auf Käuferschutz-Fall reagieren und die Forderung annehmen +
 * auf Käuferschutz-Fall reagieren und Beweise vorlegen
 
