--- a/docs/en-gb/modules/payment/pages/paypal.adoc
+++ b/docs/en-gb/modules/payment/pages/paypal.adoc
@@ -53,12 +53,6 @@ Once the assistant has been finished, you can optionally set widgets in the xref
 → In the plugin set, the versions of the plugin should be the same in the columns *Installed* and *Deployed*.
 . Complete the assistant. Pay attention to the points mentioned above. +
 → It is possible that PayPal is not available as payment method for a short period of time until everything has been completed. Thus, consider this when planning the update.
-
-[TIP]
-.
-======
-
-======
 --
 Plugin version 5.X::
 +
@@ -454,7 +448,7 @@ First check whether the link:https://marketplace.plentymarkets.com/paypal_4690[l
 [WARNING]
 .Activation and preview of the plugin
 ======
-Make sure that the PayPal plugin is already activated and deployed in the [installing-installed-plugins.adoc#[plugin set] of the main client when you are linking your account with plentymarkets. If this is not the case, malfunctions can occur. +
+Make sure that the PayPal plugin is already activated and deployed in the xref:installing-installed-plugins.adoc#[plugin set] of the main client when you are linking your account with plentymarkets. If this is not the case, malfunctions can occur. +
 Attention: The plugin-set preview must _not_ be open while the PayPal account is linked with plentymarkets.
 ======
 
@@ -463,7 +457,7 @@ image::payment:paypal-plugin-error-1.png[Plugin error message]
 
 [%interactive]
 * *Solution 1:* Change the browser and try again. plentymarkets supports the browsers Google Chrome and Mozilla Firefox.
-* *Solution 2*: There is still an active API right in the PayPal account. Remove the rights for plentymarkets. The API authorisation can be found on the following website: link:https://www.paypal.com/cgi-bin/webscr?cmd=_profile-api-list-auths[].
+* *Solution 2*: There is still an active API right in the PayPal account. Remove the rights for plentymarkets. The API authorisation can be found on link:https://www.paypal.com/cgi-bin/webscr?cmd=_profile-api-list-auths[this website^].
 
 [WARNING]
 .NOTE
@@ -517,7 +511,7 @@ First check whether the link:https://marketplace.plentymarkets.com/paypal_4690[l
 [WARNING]
 .Activation and preview of the plugin
 ======
-Make sure that the PayPal plugin is already activated and deployed in the [installing-installed-plugins.adoc#[plugin set] of the main client when you are linking your account with plentymarkets. If this is not the case, malfunctions can occur. +
+Make sure that the PayPal plugin is already activated and deployed in the xref:installing-installed-plugins.adoc#[plugin set] of the main client when you are linking your account with plentymarkets. If this is not the case, malfunctions can occur. +
 Attention: The plugin-set preview must _not_ be open while the PayPal account is linked with plentymarkets.
 ======
 
@@ -526,7 +520,7 @@ image::payment:paypal-plugin-error-1.png[Plugin error message]
 
 [%interactive]
 * *Solution 1:* Change the browser and try again. plentymarkets supports the browsers Google Chrome and Mozilla Firefox.
-* *Solution 2*: There is still an active API right in the PayPal account. Remove the rights for plentymarkets. The API authorisation can be found on the following website: link:https://www.paypal.com/cgi-bin/webscr?cmd=_profile-api-list-auths[].
+* *Solution 2*: There is still an active API right in the PayPal account. Remove the rights for plentymarkets. The API authorisation can be found on link:https://www.paypal.com/cgi-bin/webscr?cmd=_profile-api-list-auths[this website^].
 
 [WARNING]
 .NOTE
@@ -633,14 +627,16 @@ The following table explains the options you have to react to new dispute cases.
 
 |*Customer did not receive the item*
 |Your customer says that he did not receive the item. The case is on the dispute level and you have 3 options to respond to it. Depending on your response, there are different options available.
-|You have the following 3 basic response options: +
+a|You have the following 3 basic response options: +
+
 * write a message to the customer +
 * treat as conflict and accept claim +
 * treat as conflict and escalate to PayPal
 
 |*Customer says that the item is not as described*
 |Your customer says that the received item is not as described. The case is on the dispute level and you have 6 options to respond to it. Depending on your response, there are different options available.
-|You have the following 6 basic response options: +
+a|You have the following 6 basic response options: +
+
 * Write a message to the customer +
 * treat as conflict and accept claim +
 * treat as conflict and offer a full refund with item return +
@@ -650,7 +646,8 @@ The following table explains the options you have to react to new dispute cases.
 
 |*Customer reported an unauthorised transaction*
 |The customer says that he did not buy the item and the access to the account was not authorised. The case is on the claim level and this means that the customer requested buyer protection. You have 2 options to respond to it. Depending on your response, there are different options available.
-|Your 2 basic response options are: +
+a|Your 2 basic response options are: +
+
 * respond to buyer protection case and accept claim +
 * respond to buyer protection case and provide evidence
 
