Add note to label creation

--- a/docs/en-gb/modules/item/pages/barcodes.adoc
+++ b/docs/en-gb/modules/item/pages/barcodes.adoc
@@ -411,7 +411,9 @@ Unit price
 *_Note_*: If you choose RRP, then the variation’s RRP will be displayed, regardless whether you also select a sales price.
 
 !Sales price
-!Decide which sales price should be displayed. +
+!Decide which sales price should be displayed.  +
+*_Note_*: If the price type is set to sales price, the amount of this price is only taken from the variant if no price is stored in the order item; otherwise the price is taken from the order item.
+ This only applies, however, if the labels are created for an order. In this case, labels can be created from the order or from the preview.
 
 !===
 
