--- a/docs/de-de/modules/maerkte/pages/awin.adoc
+++ b/docs/de-de/modules/maerkte/pages/awin.adoc
@@ -123,8 +123,11 @@ Artikeldaten werden über ein Marktplatz-Format exportiert. Um deine Artikel zu 
 
 include::partial$catalogue-new-to-text.adoc[]
 
+* Für dieses Preisportal gibt es die Formate *Awin* und *Awin Fashion*.
+
 :catalogue-template-name: awin
 :format-item-new:
+:one-per-category:
 
 include::partial$catalogue-creation.adoc[]
 
@@ -183,5 +186,43 @@ include::partial$catalogue-change-from-elastic-export.adoc[]
 |====
 |Spalte im elastischen Export |Datenfeld im Katalog
 
+| prod_number
+| Produkt-ID
+
+| prod_name
+| Produktname
+
+|prod_price
+| Preis
+
+|currency_symbol
+| Währung
+
+| category
+| Kategorie
+
+| prod_description
+| _Datenfeld gibt es im Katalog nicht mehr._
+
+| prod_description_long
+| Beschreibung
+
+| img_small
+| _Datenfeld gibt es im Katalog nicht mehr._
+
+| img_medium
+| _Datenfeld gibt es im Katalog nicht mehr._
+
+| img_large
+| Bild-URL
+
+| manufacturer
+| _Datenfeld gibt es im Katalog nicht mehr._
+
+| prod_url
+| Produkt-URL
+
+| shipping_costs
+| Versandkosten
 
 |====
