--- a/docs/de-de/modules/maerkte/partials/awin-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/awin-recommended-mappings.adoc
@@ -90,17 +90,9 @@ _oder_
 | nein
 | * *Barcode » [Barcode des Typs GTIN wählen]*
 
-| Produkt-Kategorie
+| Kategorie
 | ja
 | * *Standardkategorie » Pfad*
-
-| Produkt-Beschreibung
-| nein
-| * *Artikeltext » Artikeltext*, Sprache *Deutsch*
-
-_oder_
-
-* Eigenschaft des Typs *Text*, Sprache *Deutsch*
 
 | UVP
 | nein
