--- a/docs/en-gb/modules/markets/partials/awin-recommended-mappings.adoc
+++ b/docs/en-gb/modules/markets/partials/awin-recommended-mappings.adoc
@@ -90,17 +90,9 @@ _or_
 | no (nein)
 | * *Barcode » [Select barcode of the type GTIN]*
 
-| Produkt-Kategorie
+| Category
 | yes
 | * *Default category » Path*
-
-| Produkt-Beschreibung
-| no (nein)
-| * *Item text » Item text*, language *German*
-
-_or_
-
-* Property of the type *Text*, language *German*
 
 | RRP
 | no (nein)
