--- a/docs/en-gb/modules/markets/partials/awin-recommended-mappings.adoc
+++ b/docs/en-gb/modules/markets/partials/awin-recommended-mappings.adoc
@@ -1,14 +1,14 @@
 [[recommended-mappings]]
 [cols="2,1,4a"]
 |====
-|Marketplace field |Mandatory? |Recommended plentymarkets mapping
+|Marketplace field|Mandatory? |Recommended plentymarkets mapping
 
 | Bild-URL
 | yes
 | * *Image » Variation image » Single image*
   ** *Image information:* Select *Full image URL*
   ** *Image position:* Select the position of the main image
-  ** *Order referrer:* Select *{market}*
+  ** *Order referrer: Select {market}*
   ** *Listing:* Do not select any option
   ** *Client:* Select the client you use for {market}.
 
@@ -97,6 +97,8 @@ _or_
 | RRP
 | no (nein)
 | * *Sales price » [Select sales price of the type RRP]*
+
+2+| Only for the format *Awin Fashion*
 
 | Size
 | no (nein)
