--- a/docs/de-de/modules/maerkte/partials/awin-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/awin-recommended-mappings.adoc
@@ -6,9 +6,9 @@
 | Bild-URL
 | ja
 | * *Bild » Varianten Bilder » Einzelbild*
-  ** *Bildinformation: Vollbild-URL* wählen
+  ** *Bildinformation:* *Vollbild-URL* wählen
   ** *Bildposition:* Position des Hauptbilds wählen
-  ** *Auftragsherkunft: {market}* wählen
+  ** *Auftragsherkunft:* *{market}* wählen
   ** *Listing:* Keine Option wählen
   ** *Mandant:* Mandanten wählen, über den du bei {market} verkaufst.
 
@@ -97,6 +97,8 @@ _oder_
 | UVP
 | nein
 | * *Verkaufspreis » [Verkaufspreis des Typs UVP wählen]*
+
+2+| Nur für Format *Awin Fashion*
 
 | Größe
 | nein
