ADD keywords and info reason ids

--- a/docs/de-de/modules/daten/pages/warenbewegung-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/warenbewegung-exportieren.adoc
@@ -125,6 +125,12 @@ Leeres Feld = Berechnungsautomatik ist nicht aktiviert.
 
 |====
 
+[TIP]
+.Gründe für Warenbewegungen
+====
+Informationen zu den möglichen Gründen und deren IDs für Wareneingänge und Warenausgänge findest du auf der Handbuchseite des Import-Formats xref:daten:elasticSync-wareneingang.adoc#310[Wareneingänge].
+====
+
 [#20]
 == Filter hinzufügen
 
