--- a/docs/en-gb/modules/stock-management/pages/setting-up-a-warehouse.adoc
+++ b/docs/en-gb/modules/stock-management/pages/setting-up-a-warehouse.adoc
@@ -1,6 +1,6 @@
 = Setting up a warehouse
 :description: Learn how to create and structure a warehouse.
-:keywords: planning a warehouse, plan a warehouse, setting up a warehouse, set up a warehouse, warehouse settings, create a warehouse, creating a warehouse, warehouse structure, warehouse setup, block stock
+:keywords: planning a warehouse, plan a warehouse, setting up a warehouse, set up a warehouse, warehouse settings, create a warehouse, creating a warehouse, warehouse structure, warehouse setup, block stock, location labels, location-labels
 :id: 5EKUCA2
 :author: team-stock
 
