--- a/docs/de-de/modules/pos/pages/pos-einrichten.adoc
+++ b/docs/de-de/modules/pos/pages/pos-einrichten.adoc
@@ -50,7 +50,9 @@ plentyPOS ist für das Kassieren mit den Währungen Euro (EUR), Schweizer Franke
 Um plentyPOS verwenden zu können, link:https://www.plentymarkets.com/de/produkt/preise/[buche zunächst eine oder mehrere Kassen^] für deine plentymarkets Edition. Informationen zu den Konditionen findest du direkt bei der Buchung oder auf der link:https://www.plentymarkets.com/de/produkt/module/point-of-sale/[plentyPOS Produktseite^].
 ====
 
-Nachdem du Kassen gebucht hast, richtest du diese Kassen im plentymarkets Backend ein. Zunächst weist du die Kassen einem Mandanten zu, indem du die Kasse im Menü *Einrichtung » Mandant » [Mandant wählen] » POS* erstellst und weitere Einstellungen vornimmst. Gehe dazu wie unten beschrieben vor.
+Nachdem du Kassen gebucht hast, dauert es zunächst einige Minuten, bis der Buchungsprozess im Hintergrund abgeschlossen ist. Logge dich dann aus deinem plentymarkets System aus und wieder ein.
+
+Anschließend richtest du die Kassen im plentymarkets Backend ein. Zunächst weist du die Kassen einem Mandanten zu, indem du die Kasse im Menü *Einrichtung » Mandant » [Mandant wählen] » POS* erstellst und weitere Einstellungen vornimmst. Gehe dazu wie unten beschrieben vor.
 
 [WARNING]
 .POS-Einstellungen nicht im laufenden Betrieb ändern
@@ -1477,7 +1479,7 @@ Personen mit Admin-Rechten haben standardmäßig die Berechtigungen, Mehrzweckgu
 
 include::_includes:page$rechte.adoc[]
 
-[#2700]
+[#2710]
 === Besonderheiten beim Verkauf von Mehrzweckgutscheinen
 
 * Der Umsatz erhöht sich beim Verkauf des Mehrzweckgutscheins nicht.
